# FLIFo

./: .env.example  .gitignore  Dockerfile  README.md  README_PRODUCTION_UPGRADE.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
acia/: __init__.py  main.py
acia/agents/: documentation.py  flow.py  graph.py  orchestrator.py  pr_review.py  retrieval.py  security.py  summary.py  test_generation.py
acia/core/: parser.py
acia/models/: schemas.py
backend/src/: api-versioning-example.ts
codesage_ai/: __init__.py  main.py
codesage_ai/agents/: graph.py  orchestrator.py  retrieval.py  security.py
codesage_ai/core/: parser.py  repository.py
docs/: ACIA_ARCHITECTURE.md  CODESAGE_AI_ARCHITECTURE.md  ENVIRONMENT_VARIABLES.md  PRODUCTION_HARDENING_ROADMAP.md  implementation-plan.md  production-hardening.md
docs/sql/: 001_init_postgres.sql  002_soft_delete_template.sql
migrations/: 001_init_postgres.sql
sql/: 001_initial_postgres.sql
src/: app.ts  main.tsx  server.ts  styles.css
src/config/: env.ts
src/db/: init.ts  postgres.ts
src/jobs/: scheduler.ts
src/lib/: api.ts  store.ts
src/middleware/: auth.ts
src/routes/: auth.ts  users.ts
src/services/: tokenService.ts
tests/: test_core.py
