[project]
name = "codesage-ai"
version = "0.1.0"
description = "CodeSage AI – Autonomous Code Intelligence Agent: enterprise AI repository intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "networkx>=3.3",
]

[project.optional-dependencies]
ai = ["langgraph>=0.2", "chromadb>=0.5", "sentence-transformers>=3.0"]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
